--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "scripts": {
     "start": "node ./dist/app.js",
     "dev": "nodemon app.ts",
-    "build": "tsc"
-   },
+    "build": "tsc",
+    "test:coverage": "nyc mocha --require ts-node/register test/**/**.spec.ts",
+    "test": "mocha --timeout 30000 --require ts-node/register test/**/**.spec.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.4",
     "bcrypt": "^5.1.1",
+    "chai-http": "^4.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
@@ -23,6 +27,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "nock": "^13.3.6",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -31,10 +36,19 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/chai": "^4.3.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mocha": "^10.0.1",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.0",
-    "@types/passport-local": "^1.0.38"
+    "@types/passport-local": "^1.0.38",
+    "@types/sinon": "^10.0.18",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "sinon": "^16.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
